School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/valid/OwnTests_stepB/valid/tests_operations/modulo_Int_Int.deca
//Test du calcul du modulo avec un int
//
{
    int a = 16%2;
    println(a);
}