School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/invalid/OwnTests_stepB/invalid/tests_operations/modulo_Float_Float.deca
//Test du calcul du modulo avec un float
//erreur attendue : "an INT was expected in Modulo"

{
    float a = 16.0%2.0;
    println(a);
}